# angularNodes

./: .gitignore  CMakeLists.txt  LICENSE  README.md
plug-ins/windows-maya2014/: angularNodes.mll
plug-ins/windows-maya2015/: angularNodes.mll
plug-ins/windows-maya2016/: angularNodes.mll
plug-ins/windows-maya2017/: angularNodes.mll
plug-ins/windows-maya2019/: angularNodes.mll
src/: SoftClampAngle.cpp  SoftClampAngle.h  n_angleBinaryOp.cpp  n_angleBinaryOp.h  n_angleMultiOp.cpp  n_angleMultiOp.h  n_angleScalarOp.cpp  n_angleScalarOp.h  n_angleUnaryOp.cpp  n_angleUnaryOp.h  n_clampAngle.cpp  n_clampAngle.h  node.h  pluginMain.cpp
